Fixed dark mode formatting

--- a/style.css
+++ b/style.css
@@ -484,7 +484,7 @@ div{
   @media (prefers-color-scheme: dark) {
 
     body {
-        background-image: linear-gradient(to right, #13010e , #010311);
+        background-image: linear-gradient(to right, #1a0213 , #030722);
     }
 
     #name {
@@ -540,6 +540,10 @@ div{
 
     .studio img {
         filter: brightness(0) invert(1);
+    }
+
+    footer h4 {
+        color: #fff;
     }
 
 }
